<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bckground"
    tools:context=".views.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="320sp"
            android:layout_height="320dp"
            android:src="@mipmap/img_logo" />

        <Button
            android:id="@+id/btnResumenVenta"
            android:layout_width="360sp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn"
            android:text="@string/str_btn_res_ven"/>

        <Button
            android:id="@+id/btnCortesMensuales"
            android:layout_width="360sp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn"
            android:layout_marginTop="15sp"
            android:text="@string/str_btn_cort_mens"/>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="360sp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn"
            android:layout_marginTop="15sp"
            android:text="@string/str_btn_cer_sesion"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_lbl_version"
            android:layout_marginTop="50sp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/color_4to"/>
    </LinearLayout>

</FrameLayout>