<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginActivity"
    android:background="@color/color_bckground">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".views.ReportsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_bckground"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/str_title_reportes"
            android:textSize="35sp"
            android:textStyle="bold"
            android:typeface="sans"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/color_4to"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_lbl_fecha_actual"
            android:layout_marginStart="25sp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/color_6to"/>

        <TextView
            android:id="@+id/txtFechaActual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0000-00-00"
            android:layout_marginStart="5sp"
            android:textSize="20sp"
            android:textColor="@color/color_6to"/>
    </LinearLayout>

        <Button
            android:id="@+id/btnGenerarReporte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/custom_btn"
            android:text="@string/str_btn_generar_reporte" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_lbl_filtro_reportes"
            android:layout_marginStart="25sp"
            android:layout_marginTop="10sp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/color_6to"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTxtDateDesde"
            android:layout_width="160dp"
            android:layout_height="35dp"
            android:layout_marginStart="25dp"
            android:ems="20"
            android:hint="@string/str_lbl_desde"
            android:background="@drawable/custom_edit_txt"
            android:clickable="false"
            android:focusable="false"/>

        <EditText
            android:id="@+id/editTxtDateHasta"
            android:layout_width="160dp"
            android:layout_height="35dp"
            android:layout_marginStart="40dp"
            android:ems="20"
            android:hint="@string/str_lbl_hasta"
            android:background="@drawable/custom_edit_txt"
            android:clickable="false"
            android:focusable="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCleanFilter"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn"
            android:text="@string/str_btn_limpiar_filtro"/>

        <Button
            android:id="@+id/btnBuscarReporte"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40sp"
            android:background="@drawable/custom_btn"
            android:text="@string/str_btn_buscar"/>

    </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvReportes"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/item_view_reporte"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:visibility="gone" />
</FrameLayout>
</ScrollView>